--- a/index.html
+++ b/index.html
@@ -14,18 +14,31 @@
 </head>
 <body>
     <header>
-        <div class='name'>Alexander H. Lee</div>
+        <div class='name'>Alexander</div>
+        <div class='name'>H.</div>
+        <div class='name'>Lee</div>
         <div class='logo'></div>
     </header>
     <main>
         <div class='info' id='mainContent'>
             <div class='label'>a<span class='restLabel'>bout</span></div>
+            <div class='infoContent hidden'>
+                <p class='firstParBio'>
+                    Hello, the name’s Alex, and I am an inquisitive fullstack developer that loves witnessing and partaking in bringing ideas to life through simple and minimalistic designs.
+                </p>
+                <p class='secondParBio'>
+                    I am a fullstack developer currently learning through Thinkful’s FullStack Immersion bootcamp. I am eager to continually learn and expand my knowledge to implement simple yet intuitive designs. 
+                    During those times I am away from coding, you can usually find me traveling far and wide ranging from different states or countries, or to the newest or hottest restaurants at wherever I am situated. It may also be likely that I’m actually still just sitting behind a computer screen playing some games. Whatever I may be doing, I yearn for new experiences and exposures to further broaden my horizon.
+                </p>
+            </div>
         </div>
         <div class='projects' id='mainContent'>
             <div class='label'>p<span class='restLabel'>rojects</span></div>
+            <div class='projectsContent hidden'></div>
         </div>
         <div class='contacts' id='mainContent'>
             <div class='label'>c<span class='restLabel'>ontacts</span></div>
+            <div class='contactsContent hidden'></div>
         </div>
     </main>
     <footer>
