--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div class='info' id='mainContent'>
-            <div class='label'>a<span class='restLabel'>bout</span></div>
+            <div class='infoLabel label'>a<span class='restLabel'>bout</span></div>
             <div class='infoContent hidden'>
                 <p class='firstParBio'>
                     Hello, the name’s Alex, and I am an inquisitive fullstack developer that loves witnessing and partaking in bringing ideas to life through simple and minimalistic designs.
@@ -33,11 +33,27 @@
             </div>
         </div>
         <div class='projects' id='mainContent'>
-            <div class='label'>p<span class='restLabel'>rojects</span></div>
-            <div class='projectsContent hidden'></div>
+            <div class='projectsLabel label'>p<span class='restLabel'>rojects</span></div>
+            <div class='projectsContent hidden'>
+                    <div class='projectOne'>
+                            <p class='appTitle'>Quiz on Finance Basics</p>
+                            <p>A simple quiz generated through the use of HTML, CSS, JavaScript, and jQueryto test basic financial terminology.</p>
+                            <p>To give it a try simply click on the image!</p>
+                            <a href= 'https://github.com/ahyunlee5/quizApp' target='_blank' class='githubLink'>Click here for the repo</a>
+                        </div>
+                        <div class='projectImg'>
+                            <a href='https://ahyunlee5.github.io/yourDestination/' target='_blank'><img src='https://lh3.googleusercontent.com/e8GIuayoHTStXUw-zKmSh0berBzlJme7WjmDDMJD6FymUxCeVCleb-0_3zOLref8YxrK6oV2EA8dU6TwOLPKq2JhxsQOIJ9WNrhrVI1JzKZuXX4C2-YSGGNj66H9FfewpBp_p0SMLQ=w2400' class='yourDestination' alt='yourDestination image'/></a>
+                        </div>
+                        <div class='projectTwo'>
+                            <p class='appTitle'>Your Destination</p>
+                            <p>A simple app that returns information on weather and points of interests with the use of HTML, CSS, JavaScript, and jQuery</p>
+                            <p>To give it a try simply click on the image!</p>
+                            <a href= 'https://github.com/ahyunlee5/yourDestination' target='_blank' class='githubLink'>Click here for the repo</a>
+                    </div>
+            </div>
         </div>
         <div class='contacts' id='mainContent'>
-            <div class='label'>c<span class='restLabel'>ontacts</span></div>
+            <div class='contactsLabel label'>c<span class='restLabel'>ontacts</span></div>
             <div class='contactsContent hidden'></div>
         </div>
     </main>
