--- a/index.html
+++ b/index.html
@@ -35,26 +35,28 @@
         <div class='projects' id='mainContent'>
             <div class='projectsLabel label'>p<span class='restLabel'>rojects</span></div>
             <div class='projectsContent hidden'>
-                    <div class='projectOne'>
-                            <p class='appTitle'>Quiz on Finance Basics</p>
-                            <p>A simple quiz generated through the use of HTML, CSS, JavaScript, and jQueryto test basic financial terminology.</p>
-                            <p>To give it a try simply click on the image!</p>
-                            <a href= 'https://github.com/ahyunlee5/quizApp' target='_blank' class='githubLink'>Click here for the repo</a>
-                        </div>
-                        <div class='projectImg'>
-                            <a href='https://ahyunlee5.github.io/yourDestination/' target='_blank'><img src='https://lh3.googleusercontent.com/e8GIuayoHTStXUw-zKmSh0berBzlJme7WjmDDMJD6FymUxCeVCleb-0_3zOLref8YxrK6oV2EA8dU6TwOLPKq2JhxsQOIJ9WNrhrVI1JzKZuXX4C2-YSGGNj66H9FfewpBp_p0SMLQ=w2400' class='yourDestination' alt='yourDestination image'/></a>
-                        </div>
-                        <div class='projectTwo'>
-                            <p class='appTitle'>Your Destination</p>
-                            <p>A simple app that returns information on weather and points of interests with the use of HTML, CSS, JavaScript, and jQuery</p>
-                            <p>To give it a try simply click on the image!</p>
-                            <a href= 'https://github.com/ahyunlee5/yourDestination' target='_blank' class='githubLink'>Click here for the repo</a>
-                    </div>
+                <div class='projectQuiz project'>
+                    <img src='https://lh3.googleusercontent.com/jV68uNe2qjRt4xt-FaJ93CFzIVF4pqVz27FE6U8ZMFh0lEmVTRb-Eb5ChBa1AEAOMo5v9QQM8G2ciac2SzFuv_tqGetiiNPXHJbHnGa-6wL5aNbNCFac2Ufnt7NxL_MBGkOewh87Iw=w2400' class='quizImg' alt='quiz image'/>
+                    <div class='projectQuiz'>A simple quiz generated through the use of HTML, CSS, JavaScript, and jQuery to test basic financial terminology.</div>
+                    <div class='projectQuiz'><a href= 'https://github.com/ahyunlee5/quizApp' target='_blank' class='githubLink'>Repo</a></div>
+                    <div class='projectQuiz'><a href='https://ahyunlee5.github.io/quizApp/' target='_blank' class='quizLivePage'>Try it out!</a></div>
+                </div>
+                <div class='projectDestination project'>
+                    <img src='https://lh3.googleusercontent.com/e8GIuayoHTStXUw-zKmSh0berBzlJme7WjmDDMJD6FymUxCeVCleb-0_3zOLref8YxrK6oV2EA8dU6TwOLPKq2JhxsQOIJ9WNrhrVI1JzKZuXX4C2-YSGGNj66H9FfewpBp_p0SMLQ=w2400' class='yourDestination' alt='yourDestination image'/>
+                    <div class='projectDestination'>An app that returns information regarding weather and points of interests based off your location search; with the use of HTML, CSS, JavaScript, and jQuery</div>
+                    <div class='projectDestination'><a href= 'https://github.com/ahyunlee5/yourDestination' target='_blank' class='githubLink'>Repo</a></div>
+                    <div class='projectDestination'><a href='https://ahyunlee5.github.io/yourDestination/' target='_blank' class='destinationLivePage'>Try it out!</a></div>
+                </div>
             </div>
         </div>
         <div class='contacts' id='mainContent'>
             <div class='contactsLabel label'>c<span class='restLabel'>ontacts</span></div>
-            <div class='contactsContent hidden'></div>
+            <div class='contactsContent hidden'>
+                <div class='contactInfo'><a href='mailto:ahyunlee@umich.edu' target='_blank'><img src='https://lh3.googleusercontent.com/QVkbMOZ2duIQ8PUquyRBAkc1xA8AZhrvSOSoq27JpmZ5LIN1kmBf0SQniQxzXEvLq8QWSoP-9R9R0PEx_6FQctE_8lzEN0Skwi4boAUvsX_HSnkYZRtwYt5MK2bsY9WrUBDtw82McQ=w2400' class='contactIcon' alt='email'></a></div>
+                <div class='contactInfo'><a href='tel:+1-248-808-3322' target='_blank'><img src='https://lh3.googleusercontent.com/aL4yKgjjppDt0eKG-3cxdIeSUFYlVV-5NRoxbK_4NRHSrvwPXus91GC6YOVzwo3pCHJIjT-nyxFu7SWv-tomAchj502CKZWNpCuJ-mD9iF07pIftjswkah2_n1mpx_Ei1eX3BmGLYA=w2400' class='contactIcon' alt='phone'></a></div>
+                <div class='contactInfo'><a href='https://github.com/ahyunlee5' target='_blank'><img src='https://lh3.googleusercontent.com/IwKHHrJHdmhkvvH7LabKz8pzBUIic55P6UiB91HkTF_vzDGCl72MCq9tmEO7xL6IK_cj0Jol66RtoXxhH2EAtFpjkNfIQVwDIoOnZWvNFgyexPW1CgWUKlq6dDcXhIkbtyAZv-5oqw=w2400' class='contactIcon' alt='github'></a></div>
+                <div class='contactInfo'><a href='https://www.linkedin.com/in/leehyunee' target='_blank'><img src='https://lh3.googleusercontent.com/lcUT_3zQcOI9WoAXpsNonN-1G65hkD3zxxw4zOJPUf3WC9kd2zggi_GodLf0h7FoO0g4jNBmapcbOxNugQu5vZLorEJG9W3DIWDaEMEzY_Oxh8dxcIUImwOmhKAcj113yXqNNjexJQ=w2400' class='contactIcon' alt='linkedIn'></a></div>
+            </div>
         </div>
     </main>
     <footer>
